force-app/main/default/objects/Score_Card_Action__c/Score_Card_Action__c.object-meta.xml
<CustomObject>
    <label>Score Card Action</label>
    <nameField>
        <label>Score Card Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Score Card Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>