force-app/main/default/objects/Score_Card_Action__c/fields/Action_Plan_Results__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Results__c</fullName>
    <label>Action Plan Results</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>