force-app/main/default/objects/Score_Card_Action__c/fields/Action_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Status__c</fullName>
    <label>Action Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>