force-app/main/default/objects/Score_Card_Action__c/fields/Score_Card__c.field-meta.xml
<CustomField>
    <fullName>Score_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Score Card</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Score Card Actions</relationshipLabel>
    <relationshipName>Score_Card_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>