force-app/main/default/objects/Score_Card_Action__c/fields/Target_Date_For_Action__c.field-meta.xml
<CustomField>
    <fullName>Target_Date_For_Action__c</fullName>
    <label>Target Date For Action</label>
    <type>Date</type>
</CustomField>